fixed padding at bottom of entries on mobile

--- a/responsive.css
+++ b/responsive.css
@@ -71,7 +71,6 @@ html {
 #entry_container {
     padding-right:0;
     padding-left:0;
-    padding-bottom:20px;
 }
 #interaction_container {
     background-color: #fafafa;
@@ -103,6 +102,11 @@ html {
 
 
 @media (min-width:800px){
+
+    #entry_container {
+        padding-bottom:20px;
+    }
+
     #map {
         top:50px;
         position:fixed;
